# sqgo

./: Makefile  Makefile.am  Makefile.in  aes_code.c  aes_code.h  authentication.c  check.sh  check.sql  config.h  config.h.in  config.status  configure  configure.in  conn.c  define.h  direct_login.c  direct_login.h  display.c  display.h  get.c  get.h  knownhosts.c  loop.c  name.sh  quiry.c  quiry.h  readme  sqgo.c  sqgo.h  ssh.c  ssh.h  verify.c  verify.h
.deps/: aes_code.Po  authentication.Po  conn.Po  display.Po  get.Po  knownhosts.Po  loop.Po  quiry.Po  sqgo.Po  ssh.Po  verify.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
